--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.22",
-    "@elizaos/core": "workspace:*",
+    "@elizaos/core": "^1.0.0-beta.52",
     "@elizaos/plugin-sql": "^1.0.0-beta.52",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "ai": "^4.3.15",
