--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,7 @@
     "noEmitOnError": false,
     "moduleDetection": "force",
     "allowArbitraryExtensions": true,
-    "baseUrl": ".",
-    "paths": {
-      "@elizaos/core": ["../core/src"],
-      "@elizaos/core/*": ["../core/src/*"]
-    }
+    "baseUrl": "."
   },
   "include": ["src/**/*.ts"]
 }
