--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@elizaos/plugin-knowledge",
   "description": "Plugin for Knowledge",
-  "version": "1.0.0-beta.52",
+  "version": "1.0.0-beta.70",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,8 +30,8 @@
     "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.22",
-    "@elizaos/core": "^1.0.0-beta.52",
-    "@elizaos/plugin-sql": "^1.0.0-beta.52",
+    "@elizaos/core": "^1.0.0-beta",
+    "@elizaos/plugin-sql": "^1.0.0-beta",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
@@ -39,11 +39,11 @@
     "mammoth": "^1.9.0",
     "pdfjs-dist": "^5.2.133",
     "textract": "^2.5.0",
-    "zod": "3.24.2"
+    "zod": "3.25.23"
   },
   "devDependencies": {
-    "tsup": "8.4.0",
-    "typescript": "5.8.2",
+    "tsup": "8.5.0",
+    "typescript": "5.8.3",
     "prettier": "3.5.3"
   },
   "scripts": {
@@ -55,13 +55,14 @@
     "test": "elizaos test",
     "publish": "elizaos publish",
     "format": "prettier --write ./src",
-    "format:check": "prettier --check ./src"
+    "format:check": "prettier --check ./src",
+    "clean": "rm -rf dist .turbo node_modules .turbo-tsconfig.json tsconfig.tsbuildinfo"
   },
   "publishConfig": {
     "access": "public"
   },
   "resolutions": {
-    "zod": "3.24.2"
+    "zod": "3.25.23"
   },
   "gitHead": "b165ad83e5f7a21bc1edbd83374ca087e3cd6b33"
 }
