--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.22",
-    "@elizaos/core": "^1.0.0-beta",
+    "@elizaos/core": "workspace:*",
     "@elizaos/plugin-sql": "^1.0.0-beta",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "ai": "^4.3.15",
@@ -48,7 +48,7 @@
   },
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup",
+    "build": "vite build && tsup",
     "lint": "prettier --write ./src",
     "test": "elizaos test",
     "format": "prettier --write ./src",
