--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,7 @@
     "resolveJsonModule": true,
     "moduleDetection": "force",
     "allowArbitraryExtensions": true,
-    "paths": {
-      "@elizaos/core": ["../core/src"],
-      "@elizaos/core/*": ["../core/src/*"]
-    }
+    "jsx": "react-jsx"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
