--- a/package.json
+++ b/package.json
@@ -30,14 +30,16 @@
     "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.22",
-    "@elizaos/core": "workspace:*",
+    "@elizaos/core": "^1.0.0-beta",
     "@elizaos/plugin-sql": "^1.0.0-beta",
     "@openrouter/ai-sdk-provider": "^0.4.5",
+    "@vitejs/plugin-react-swc": "^3.10.0",
     "ai": "^4.3.15",
     "dotenv": "^16.5.0",
     "esbuild-plugin-copy": "^2.1.1",
     "mammoth": "^1.9.0",
     "pdfjs-dist": "^5.2.133",
+    "react-force-graph-2d": "^1.27.1",
     "textract": "^2.5.0",
     "zod": "3.25.23"
   },
