--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@elizaos/plugin-knowledge",
   "description": "Plugin for Knowledge",
-  "version": "1.0.0-beta.72",
+  "version": "1.0.0-beta.73",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -33,20 +33,30 @@
     "@elizaos/core": "^1.0.0-beta",
     "@elizaos/plugin-sql": "^1.0.0-beta",
     "@openrouter/ai-sdk-provider": "^0.4.5",
+    "@tanstack/react-query": "^5.51.1",
     "@vitejs/plugin-react-swc": "^3.10.0",
     "ai": "^4.3.15",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "esbuild-plugin-copy": "^2.1.1",
+    "lucide-react": "^0.408.0",
     "mammoth": "^1.9.0",
     "pdfjs-dist": "^5.2.133",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-force-graph-2d": "^1.27.1",
+    "tailwind-merge": "^2.4.0",
     "textract": "^2.5.0",
     "zod": "3.25.23"
   },
   "devDependencies": {
     "tsup": "8.5.0",
     "typescript": "5.8.3",
-    "prettier": "3.5.3"
+    "prettier": "3.5.3",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
+    "postcss": "^8.4.39",
+    "autoprefixer": "^10.4.19"
   },
   "scripts": {
     "dev": "tsup --watch",
