--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pdfjs-dist": "^5.2.133",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "react-force-graph-2d": "^1.27.1",
     "tailwind-merge": "^2.4.0",
     "textract": "^2.5.0",
