--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@elizaos/plugin-knowledge",
   "description": "Plugin for Knowledge",
-  "version": "1.0.0-beta.78",
+  "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -30,7 +30,7 @@
     "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.22",
-    "@elizaos/core": "^1.0.0-beta",
+    "@elizaos/core": "^1.0.0",
     "@elizaos/plugin-sql": "^1.0.0-beta",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@tanstack/react-query": "^5.51.1",
