--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "tsup": "8.5.0",
     "typescript": "5.8.3",
     "prettier": "3.5.3",
-    "tailwindcss": "^3.4.4",
+    "@tailwindcss/vite": "^4.1.0",
+    "tailwindcss": "^4.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "postcss": "^8.4.39",
+    "postcss": "^8.5.3",
     "autoprefixer": "^10.4.19"
   },
   "scripts": {
