--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@elizaos/core": "^1.0.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@tanstack/react-query": "^5.51.1",
+    "@types/multer": "^1.4.13",
     "@vitejs/plugin-react-swc": "^3.10.0",
     "ai": "^4.3.15",
     "clsx": "^2.1.1",
@@ -40,11 +41,12 @@
     "esbuild-plugin-copy": "^2.1.1",
     "lucide-react": "^0.408.0",
     "mammoth": "^1.9.0",
+    "multer": "^2.0.1",
     "pdfjs-dist": "^5.2.133",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1",
     "react-force-graph-2d": "^1.27.1",
+    "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.4.0",
     "textract": "^2.5.0",
     "zod": "3.25.23"
