--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.525.0",
     "mammoth": "^1.9.0",
     "multer": "^2.0.1",
+    "ollama-ai-provider": "1.2.0",
     "pdfjs-dist": "^5.2.133",
     "pg": "^8.16.3",
     "react": "^19.1.0",
